--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 OpenLDAP Change Log
 
+Changes included in OpenLDAP 1.1.5
+	CVS Tag: OPENLDAP_REL_ENG_1_1
+	Fixed slapd/ldbm/add cache set state deadlock bug
+
 Changes included in OpenLDAP 1.1.4
 	CVS Tag: OPENLDAP_REL_ENG_1_1_4
 	Updated docs
