--- a/doc/man/man5/slapd.conf.5
+++ b/doc/man/man5/slapd.conf.5
@@ -1,4 +1,4 @@
-.TH SLAPD.CONF 5  "13 November 1995" "U-M LDAP LDVERSION"
+.TH SLAPD.CONF 5 "20 January 1999" "OpenLDAP LDVERSION"
 .SH NAME
 slapd.conf \- configuration file for slapd, the stand-alone LDAP daemon
 .SH SYNOPSIS
@@ -103,13 +103,42 @@ distinguished name
 .RE
 .TP
 .B
-defaultaccess { none | compare | search | read | write | delete }
+defaultaccess [self]{ none | compare | search | read | write }
 Specify the default access to grant requestors not matched by 
 any other access line.  The default behavior is to grant read access.
+.TP
+.B idletimeout <integer>
+Specify the number of seconds to wait before forcibly closing
+an idle client connections.  A idletimeout of 0 disables this
+feature.  The default is 0.
 .TP
 .B include <filename>
 Read additional configuration information from the given file before
 continuing with the next line of the current file.
+.TP
+.B pidfile <filename>
+The ( absolute ) name of a file that will hold the 
+.B slapd
+server's process ID ( see
+.BR getpid (2)
+) if started without the debugging command line option.
+.TP
+.B argsfile <filename>
+The ( absolute ) name of a file that will hold the 
+.B slapd
+server's command line options
+if started without the debugging command line option.
+.TP
+.B
+locale { <locale-name> | on | off }
+Obey <locale-name>'s character classification and case conversion; i.e. the
+.BR locale (5)
+LC_CTYPE category.  See
+.BR locale (5)
+for details about locales.  "on" takes the locale from the environment,
+typically $LANG or $LC_CTYPE, and will only work properly if slapd will
+run with the same environment variables as when the database was
+generated.  "off" (the default setting) resets to the initial "C" locale.
 .TP
 .B loglevel <integer>
 Specify the level at which debugging statements and operation 
@@ -169,9 +198,10 @@ used in conjunction with the schemacheck option.
 Specify the referral to pass back when
 .BR slapd (8)
 cannot find a local database to handle a request.
+If specified multiple times, each url is provided.
 .TP
 .B schemacheck { on | off }
-Turn schema checking on or off. The default is off.
+Turn schema checking on or off. The default is on.
 .TP
 .B sizelimit <integer>
 Specify the maximum number of entries to return from a search operation.
@@ -238,7 +268,10 @@ Specify the DN of an entry that is not subject to access control
 or administrative limit restrictions for operations on this database.
 .TP
 .B rootpw <password>
-Specify a password for the rootdn.
+Specify a password (or hash of the password) for the rootdn.
+This option accepts all password formats known to the server
+including \fB{SHA}\fP, \fB{MD5}\fP, \fB{CRYPT}\fP, and cleartext.  
+Cleartext passwords are not recommended.
 .TP
 .B suffix <dn suffix>
 Specify the DN suffix of queries that will be passed to this 
@@ -252,6 +285,12 @@ It specifies the DN allowed to make changes to the replica (typically,
 this is the DN
 .BR slurpd (8)
 binds as when making changes to the replica).
+.TP
+.B updateref <url>
+Specify the referral to pass back when
+.BR slapd (8)
+is asked to modify a replicated local database.
+If specified multiple times, each url is provided.
 .SH LDBM BACKEND-SPECIFIC OPTIONS
 Options in this category only apply to the LDBM backend database. That is,
 they must follow a "database ldbm" line and come before any subsequent
@@ -266,6 +305,11 @@ by the LDBM backend database instance.  The default is 1000 entries.
 Specify the size in bytes of the in-memory cache associated 
 with each open index file. If not supported by the underlying database 
 method, this option is ignored without comment.  The default is 100000 bytes.
+.TP
+.B dbcachenowsync
+Specify that database writes should not be immediately synchronized
+with in memory changes.  Enabling this option may improve performance
+at the expense of data security.
 .TP
 .B directory <directory>
 Specify the directory where the LDBM files containing the database and
@@ -333,8 +377,14 @@ ETCDIR/slapd.conf
 .SH SEE ALSO
 .BR ldap (3),
 .BR slapd.replog (5),
+.BR locale (5),
 .BR passwd (5),
 .BR slapd (8),
 .BR slurpd (8),
 .LP
 "The SLAPD and SLURPD Administrator's Guide"
+.SH ACKNOWLEDGEMENTS
+.B	OpenLDAP
+is developed and maintained by The OpenLDAP Project (http://www.openldap.org/).
+.B	OpenLDAP
+is derived from University of Michigan LDAP 3.3 Release.  
