--- a/doc/man/man1/ldapsearch.1
+++ b/doc/man/man1/ldapsearch.1
@@ -1,32 +1,61 @@
-.TH LDAPSEARCH 1 "29 March 1996" "U-M LDAP LDVERSION"
+.TH LDAPSEARCH 1 "10 November 1998" "OpenLDAP LDVERSION"
 .SH NAME
 ldapsearch \- ldap search tool
 .SH SYNOPSIS
 .B ldapsearch
-.B [\-n]
-.B [\-u]
-.B [\-v]
-.B [\-k]
-.B [\-K]
-.B [\-t]
-.B [\-A]
-.B [\-B]
-.B [\-L]
-.B [\-R]
-.B [\-d debuglevel]
-.B [\-F sep]
-.B [\-f file]
-.B [\-D binddn]
-.B [\-w bindpasswd]
-.B [\-h ldaphost]
-.B [\-p ldapport]
-.B [\-b searchbase]
-.B [\-s scope ]
-.B [\-a deref]
-.B [\-l time limit]
-.B [\-z size limit]
-.B filter
-.B [attrs....]
+[\c
+.BR \-n ]
+[\c
+.BR \-u ]
+[\c
+.BR \-v ]
+[\c
+.BR \-k ]
+[\c
+.BR \-K ]
+[\c
+.BR \-t ]
+[\c
+.BR \-A ]
+[\c
+.BR \-B ]
+[\c
+.BR \-L ]
+[\c
+.BR \-M[M] ]
+[\c
+.BR \-R ]
+[\c
+.BI \-d \ debuglevel\fR]
+[\c
+.BI \-F \ sep\fR]
+[\c
+.BI \-f \ file\fR]
+[\c
+.BI \-D \ binddn\fR]
+[\c
+.BR \-W ]
+[\c
+.BI \-w \ bindpasswd\fR]
+[\c
+.BI \-h \ ldaphost\fR]
+[\c
+.BI \-p \ ldapport\fR]
+[\c
+.BI \-P \ 2\fR\||\|\fI3\fR]
+[\c
+.BI \-b \ searchbase\fR]
+[\c
+.BI \-s \ base\fR\||\|\fIone\fR\||\|\fIsub\fR]
+[\c
+.BI \-a \ never\fR\||\|\fIalways\fR\||\|\fIsearch\fR\||\|\fIfind\fR]
+[\c
+.BI \-l \ timelimit\fR]
+[\c
+.BI \-z \ sizelimit\fR]
+.I filter
+[\c
+.IR attrs... ]
 .SH DESCRIPTION
 .I ldapsearch
 is a shell-accessible interface to the
@@ -87,18 +116,23 @@ Display search results in
 format.  This option also turns on the -B option, and causes the -F option
 to be ignored.
 .TP
+.B \-M[M]
+Enable manage DSA IT control.
+.B \-MM
+makes control critical.
+.TP
 .B \-R
 Do not automatically follow referrals returned while searching.
 .B ldapsearch
 must be compiled with LDAP_REFERRALS defined for referrals to be
 automatically followed by default, and for this option to have any effect.
 .TP
-.B \-F sep
+.BI \-F \ sep
 Use \fIsep\fP as the field separator between attribute names and values.
 The default separator is `=', unless the -L flag has been specified, in
 which case this option is ignored.
 .TP
-.B \-S attribute
+.BI \-S \ attribute
 Sort the entries returned based on \fIattribute\fP. The default is not
 to sort entries returned.  If \fIattribute\fP is a zero-length string (""),
 the entries are sorted by the components of their Distingished Name.  See
@@ -110,61 +144,78 @@ normally prints out entries as it receives them. The use of the
 option defeats this behavior, causing all entries to be retrieved,
 then sorted, then printed.
 .TP
-.B \-d debuglevel
+.BI \-d \ debuglevel
 Set the LDAP debugging level to \fIdebuglevel\fP.
 .B ldapsearch
 must be compiled with LDAP_DEBUG defined for this option to have any effect.
 .TP
-.B \-f file
+.BI \-f \ file
 Read a series of lines from \fIfile\fP, performing one LDAP search for
 each line.  In this case, the \fIfilter\fP given on the command line
 is treated as a pattern where the first occurrence of \fB%s\fP is
 replaced with a line from \fIfile\fP.  If \fIfile\fP is a single \fI-\fP
 character, then the lines are read from standard input.
 .TP
-.B \-D binddn
-Use \fIbinddn\fP to bind to the X.500 directory. \fIbinddn\fP should be
+.BI \-D \ binddn
+Use \fIbinddn\fP to bind to the LDAP directory. \fIbinddn\fP should be
 a string-represented DN as defined in RFC 1779.
 .TP
-.B \-w bindpasswd
+.B \-W
+Prompt for simple authentication.
+This is used instead of specifying the password on the command line.
+.TP
+.BI \-w \ bindpasswd
 Use \fIbindpasswd\fP as the password for simple authentication.
 .TP
-.B \-h ldaphost
+.BI \-h \ ldaphost
 Specify an alternate host on which the ldap server is running.
 .TP
-.B \-p ldapport
+.BI \-p \ ldapport
 Specify an alternate TCP port where the ldap server is listening.
 .TP
-.B \-b searchbase
+.BI \-b \ searchbase
 Use \fIsearchbase\fP as the starting point for the search instead of
 the default.
 .TP
-.B \-s scope
-Specify the scope of the search.  \fIscope\fP should be one of
-.B base,
-.B one,
+.BI \-s \ base\fR\||\|\fIone\fR\||\|\fIsub
+Specify the scope of the search to be one of
+.IR base ,
+.IR one ,
 or
-.B sub
+.I sub
 to specify a base object, one-level, or subtree search.  The default
 is
-.BR sub .
+.IR sub .
 .TP
-.B \-a deref
-Specify how aliases dereferencing is done.  \fIderef\fP should be one of
-.B never,
-.B always,
-.B search,
+.BI \-a \ never\fR\||\|\fIalways\fR\||\|\fIsearch\fR\||\|\fIfind
+Specify how aliases dereferencing is done.  Should be one of
+.IR never ,
+.IR always ,
+.IR search ,
 or
-.B find
+.I find
 to specify that aliases are never dereferenced, always dereferenced,
 dereferenced when searching, or dereferenced only when locating the
 base object for the search.  The default is to never dereference aliases.
 .TP
-.B \-l timelimit
-wait at most \fItimelimit\fP seconds for a search to complete.
+.BI \-P \ 2\fR\||\|\fI3
+Specify the LDAP protocol version to use.
 .TP
-.B \-z sizelimit
-retrieve at most \fIsizelimit\fP seconds for a search to complete.
+.BI \-l \ timelimit
+wait at most \fItimelimit\fP seconds for a search to complete.  A
+timelimit of
+.I 0
+(zero) removes the
+.B ldap.conf
+limit.
+.TP
+.BI \-z \ sizelimit
+retrieve at most \fIsizelimit\fP entries for a search.  A sizelimit
+of 
+.I 0
+(zero) removes the 
+.B ldap.conf
+limit.
 .SH OUTPUT FORMAT
 If one or more entries are found, each entry is written to standard output
 in the form:
@@ -275,6 +326,7 @@ status and a diagnostic message being written to standard error.
 .BR ldapdelete (1),
 .BR ldapmodify (1),
 .BR ldapmodrdn (1),
+.BR ldap.conf (5),
 .BR ldap (3),
 .BR ldap_search (3)
 .LP
@@ -289,3 +341,8 @@ Howes, T.,
 .SM RFC
 1558,
 University of Michigan, December 1993.
+.SH ACKNOWLEDGEMENTS
+.B	OpenLDAP
+is developed and maintained by The OpenLDAP Project (http://www.openldap.org/).
+.B	OpenLDAP
+is derived from University of Michigan LDAP 3.3 Release.  
